<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:gravity="center_horizontal"
        >
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Vraag"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="left"/>
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/vraag"
            />
    <EditText
            android:id="@+id/antwoord"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textMultiLine|textAutoCorrect"
            android:hint="@string/antwoord_hint"
            android:layout_marginTop="50dp"
            />
    <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            />
    <Button
            android:id="@+id/dossier_aanmaken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dossier_aanmaken_knop"
            android:layout_marginTop="50dp"/>
</LinearLayout>

